# xscope_fileio

./: .gitignore  CMakeLists.txt
host/: CMakeLists.txt
xscope_fileio/: CMakeLists.txt  __init__.py
